--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@types/node": "^22.13.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "next": "^15.1.7",
     "next-themes": "latest",
+    "postcss": "^8.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@types/react": "^18",
